tests/ui/block-result/issue-11714.stderr
error[E0308]: mismatched types
  --> $DIR/issue-11714.rs:1:14
   |
LL | fn blah() -> i32 {
   |    ----      ^^^ expected `i32`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression
...
LL |     ;
   |     - help: remove this semicolon to return this value

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
