tests/ui/block-result/issue-11714.rs
fn blah() -> i32 { //~ ERROR mismatched types
    1

    ;
}

fn main() { }
